--- a/index_krakow.html
+++ b/index_krakow.html
@@ -6,7 +6,7 @@
 	<meta charset='UTF-8'>
 	<link rel="stylesheet" href="style_krakow.css">
 </head>
- 
+ 	//FAR
 	<body>
 		<header>
 			<h1>Kraków moje miasto</h1>
