--- a/kontakty.html
+++ b/kontakty.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <main>
+        //far
         <div class="form-Kontakty">
             <form  action="https://formspree.io/f/myzyzvaw" method="post">
                 <label for="fname">First Name</label>
