--- a/index_krakow.html
+++ b/index_krakow.html
@@ -53,14 +53,15 @@
 				— Nie, pana nabujali. <br>
 			</h5>
 			<figure>
+				<img src
 				<figcaption>text</figcaption>
 			</figure>
 			
 			<ul>
-			<li>text1</li>
-			<li>text2</li>
-			<li>text3</li>
-			<li>text4</li>
+				<li>text1</li>
+				<li>text2</li>
+				<li>text3</li>
+				<li>text4</li>
 			</ul>
 	 
 			<ol>
