--- a/index_krakow.html
+++ b/index_krakow.html
@@ -53,8 +53,8 @@
 				— Nie, pana nabujali. <br>
 			</h5>
 			<figure>
-				<img src
-				<figcaption>text</figcaption>
+				<img src="krakow.jpeg" alt="obrazek krakow">
+				<figcaption>Ciekawe miejsca w Krakowie</figcaption>
 			</figure>
 			
 			<ul>
