--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			<p>
 				&copy;Klasa 3a Franciszek Stopa
 			</p>
-		</footer id='#footer'>
+		</footer>
 		<script type="text/javascript">
 			(function (t, p, w, d, g) {
 				if (t.getElementById(w)) return;
