--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 				</tr>
 			</table>
 		</main>
-		<footer id="#footer">
+		<footer id="footer">
 			<p>
 				x<sub>1</sub>+x<sup>2</sup>=100<br>
 				Lekcja trwa: 9<sup>20</sup> - 10<sup>05</sup>
