--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>Kraków moje miasto</h1>
 			<nav>
 				<ul>
-					<li><a href="index_krakow.html">Główna strona</a></li>
+					<li><a href="index.html">Główna strona</a></li>
 					<li><a href="js.html">Galeria</a></li>
 					<li><a href="kontakty.html">Kontakty</a></li>
 					<li><a href="#footer">Footer</a></li>
